Version CVS HEAD (?)

  * general changes:
    - fixed compilation with gcc 4.3

  * src/gig.cpp, src/gig.h:
    - added partial support for MIDI rules, only the Controller
      Triggered rule is supported so far
    - bugfix: removed another iterator invalidation in DeleteSample
    - bugfix in Sample::LoadSampleData*(): reset sample read position to
      sample start before trying to (re)load sample data from file (#82)

  * src/RIFF.cpp, src/RIFF.h:
    - bugfix: saving to the same file after the file size had been
      increased made the file corrupt (#82)
    - bugfix: refuse Chunk::Read() in case chunk has just been added, that
      is not written physically yet (#82)
    - bugfix: saving to the same file after the file size had been
      decreased sometimes also made the file corrupt!
    - bugfix: undefined behavior (e.g. endless loop) when opening zero
      length files, now throws a RIFF::Exception instead (fixes bug #121)

Version 3.2.1 (5 Dec 2007)

  * src/RIFF.cpp, src/RIFF.h:
    - avoid Windows to perform unnecessary file stream caching which would
      decrease disk streaming performance on Windows systems otherwise

  * src/gig.cpp, src/gig.h:
    - added File::SetAutoLoad() and File::GetAutoLoad() for allowing
      applications to retrieve very superficial informations like amount of
      instruments and their names in a very fast way

Version 3.2.0 (14 Oct 2007)

  * packaging changes:
    - added Mac OSX XCode project files (patch by Toshi Nagata)
    - Dev-C++ (win32) project file is automatically updated with
      the version info from configure.in
    - the configure script can now be used in Windows with MSYS
    - added a mainpage for the Doxygen API documentation

  * src/DLS.cpp, src/DLS.h:
    - added Sampler::AddSampleLoop() and Sampler::DeleteSampleLoop() methods
    - fixed write support for big-endian systems
    - improved handling of fixed length info strings - separate default